[tool.poetry]
name = "zulipbot"
version = "0.1.0"
description = ""
authors = ["Stavros Korokithakis <hi@stavros.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zulip = "^0.8.2"
openai = "^0.27.4"
pony = "^0.7.16"

[tool.ruff]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
